<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">premadetext</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="who">who?</string>
	<string name="where">where?</string>
	<string name="finsih">finish</string>
	<string name="sms">sms</string>
	<string name="autofill">autofill</string>
	<string name="email">email</string>
	<string name="Reset">Reset</string>
</resources>
